Implement create idea logic
